@@ -1,4 +1,9 @@
 14-May-2015 Laurent Duflot
+	* ZeroLeptonCRY, PhysObjProxies: remove isolation in PhotonProxy and
+	NTCRYVars block since not used directly in IsSignalPhoton that now
+	uses the isolation tool.
+
+14-May-2015 Laurent Duflot
 	* adapt to SUSYTools-00-05-00-30:
 	CosmicMuon vetoes 5 x more events  -> to be understood
 	ttbar: -20% in SR and -10% in CRWT
